Update analyse_sentiment .ipynb

--- a/analyse_sentiment .ipynb
+++ b/analyse_sentiment .ipynb
@@ -35,7 +35,7 @@
     "# api key of Google Cloud (YouTube v3) and id video of YouTube site\n",
     "#that video chosen was the trailer of The Mandalorian\n",
     "id_video = '2WHgnoVKgLI'\n",
-    "api_youtube = 'AIzaSyCDl1lA1MTynZKADKbajLG8_XfFUeXu-7o'"
+    "api_youtube = 'API_YouYube_GCP'"
    ]
   },
   {
